--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     <script defer src="/src/js/scrollreveal.min.js"></script>
 
     <!-- main css -->
-    <link rel="stylesheet" href="/src/input.css" />
+    <link rel="stylesheet" href="/src/output.css" />
 
     <!-- main js -->
     <script defer src="/src/js/script.js"></script>
   </head>
 
-  <body class="bg-( --color-accent-2)">
-    hello
+  <body class="bg-accent-2/20">
+    <h2>hello</h2>
   </body>
 </html>
