Hero Section - Feature & Main Image With Text

--- a/index.html
+++ b/index.html
@@ -118,6 +118,83 @@
       </header>
       <!-- header end -->
 
+      <!-- hero start -->
+      <section class="relative py-24 xl:py-0 xl:h-[800px] flex items-center">
+        <div
+          class="bg-accent-1 w-full xl:w-3/4 h-full absolute top-0 left-0 z-10 xl:rounded-tr-[500px]"
+        ></div>
+
+        <!-- text & feature img start -->
+        <div
+          class="relative z-40 h-full w-full max-w-[1150px] mx-auto xl:border-l border-primary/30 flex items-center before:content-[''] before:absolute before:left-[270px] before:top-0 before:h-full xl:before:border-l before:border-primary/30 before:-z-1"
+        >
+          <div class="flex mx-auto xl:mx-0 text-center xl:text-left">
+            <div class="w-full max-w-[600px] xl:max-w-[720px] px-4 xl:px-0">
+              <h1 class="hero__title h1 mb-8">
+                Modern Interior Design Service
+              </h1>
+
+              <p class="hero__subtitle max-w-[480px] mx-auto xl:mx-0 mb-12">
+                InteriorFirm is an acclaimed multidisciplinary studio
+                specializing in interior architecture, interior design and decor
+                that redefines laid-back luxury.
+              </p>
+
+              <!-- feature img & cta btn start -->
+              <div
+                class="flex xl:absolute justify-center xl:items-start gap-16"
+              >
+                <!-- feature image start -->
+                <div
+                  class="hero__featuredImg hidden xl:flex w-[270px] h-[478px] bg-gray-200 rounded-full"
+                >
+                  <img src="/assets/hero/img1.png" alt="Feature Image" />
+                </div>
+                <!-- feature image end -->
+
+                <!-- cta btn start -->
+                <div>
+                  <button
+                    class="btn btn-lg bg-accent-2 flex items-center gap-3 !px-6"
+                  >
+                    <span>Explore Now</span>
+                    <i class="ri-arrow-right-long-line"></i>
+                  </button>
+                </div>
+                <!-- cta btn end -->
+              </div>
+              <!-- feature img & cta btn start -->
+            </div>
+          </div>
+        </div>
+        <!-- text & feature img end -->
+
+        <!-- main img & border start -->
+        <div class="hero__mainImg-border absolute z-20 right-0 hidden xl:flex">
+          <!-- main img start -->
+          <div
+            class="hero__mainImg w-[780px] h-[600px] rounded-bl-[400px] relative z-20 overflow-hidden"
+          >
+            <img src="assets/hero/hero-img.jpg" alt="Main  Image" />
+          </div>
+          <!-- main image end -->
+
+          <!-- border start -->
+          <div
+            class="border border-primary/30 w-[820px] h-[600px] absolute z-10 top-10 -left-10 rounded-bl-[400px]"
+          ></div>
+          <!-- border end -->
+        </div>
+        <!-- main img & border end -->
+
+        <!-- bottom border start -->
+        <div
+          class="xl:border-b w-[1170px] border-primary/30 absolute z-10 right-0 bottom-0"
+        ></div>
+        <!-- bottom border end -->
+      </section>
+      <!-- hero end -->
+
       <!-- temp div -->
       <div class="h-[3000px]"></div>
       <!-- temp div -->
