About Section - absolute, block, flex, grid

--- a/index.html
+++ b/index.html
@@ -121,12 +121,12 @@
       <!-- hero start -->
       <section class="relative py-24 xl:py-0 xl:h-[800px] flex items-center">
         <div
-          class="bg-accent-1 w-full xl:w-3/4 h-full absolute top-0 left-0 z-10 xl:rounded-tr-[500px]"
+          class="bg-accent-1 w-full xl:w-3/4 h-full absolute z-10 top-0 left-0 xl:rounded-tr-[500px]"
         ></div>
 
         <!-- text & feature img start -->
         <div
-          class="relative z-40 h-full w-full max-w-[1150px] mx-auto xl:border-l border-primary/30 flex items-center before:content-[''] before:absolute before:left-[270px] before:top-0 before:h-full xl:before:border-l before:border-primary/30 before:-z-1"
+          class="relative z-40 h-full w-full max-w-[1170px] mx-auto xl:border-l border-primary/30 flex items-center before:content-[''] before:absolute before:left-[270px] before:top-0 before:h-full xl:before:border-l before:border-primary/30 before:-z-1"
         >
           <div class="flex mx-auto xl:mx-0 text-center xl:text-left">
             <div class="w-full max-w-[600px] xl:max-w-[720px] px-4 xl:px-0">
@@ -194,6 +194,105 @@
         <!-- bottom border end -->
       </section>
       <!-- hero end -->
+
+      <!-- about start -->
+      <section
+        class="about relative min-h-auto xl:h-[614px] border-b border-primary/30"
+      >
+        <div class="container mx-auto xl:border-x border-primary/30 h-full">
+          <!-- featured image 1 start -->
+          <div
+            class="about__featureImg w-[270px] h-[418px] rounded-b-full hidden xl:flex absolute left-[32%]"
+          >
+            <img src="assets/about/img1.png" alt="About Top Image" />
+          </div>
+          <!-- featured image 1 end -->
+
+          <div class="flex gap-4 h-full justify-center">
+            <!-- featured image 2 & scroll down start -->
+            <div class="flex-1 relative hidden xl:block">
+              <!-- featured image 2 start -->
+              <div
+                class="about__featuredImg2 w-[132px] h-[206px] absolute bottom-0 left-[164px]"
+              >
+                <img src="assets/about/img2.png" alt="About Bottom Image " />
+              </div>
+              <!-- featured image 2 end -->
+
+              <!-- scroll down start -->
+              <div
+                class="about__scrolldown w-[132px] h-[200px] absolute bottom-[60px] -left-[65px]"
+              >
+                <img
+                  src="assets/about/scroll-down.svg"
+                  alt="About scroll Down"
+                />
+              </div>
+              <!-- scroll down end -->
+            </div>
+            <!-- featured image 2 & scroll down end -->
+
+            <!-- stats & form start -->
+            <div class="flex-1 p-12 flex items-center justify-center gap-12">
+              <div class="flex flex-col items-center">
+                <!-- stats start -->
+                <div class="about__stats flex mb-12 gap-16">
+                  <!-- first stats start -->
+                  <div class="flex flex-col gap-2">
+                    <div
+                      class="text-5xl xl:text-7xl font-extrabold leading-none"
+                    >
+                      24
+                    </div>
+
+                    <p class="max-w-[100px] text-2xl leading-6">
+                      Years of Experience
+                    </p>
+                  </div>
+                  <!-- first stats end -->
+
+                  <!-- second stats start -->
+                  <div class="flex flex-col gap-2">
+                    <div
+                      class="text-5xl xl:text-7xl font-extrabold leading-none"
+                    >
+                      195
+                    </div>
+
+                    <p class="max-w-[100px] text-2xl leading-6">
+                      projects Completed
+                    </p>
+                  </div>
+                  <!-- second stats end -->
+                </div>
+                <!-- stats end -->
+
+                <!-- form start -->
+                <div class="about__form">
+                  <h4 class="h4 text-center mb-8">Design Your Dream Home...</h4>
+
+                  <form
+                    class="flex flex-col xl:flex-row min-h-[135px] xl:min-h-auto gap-4 xl:gap-0 items-center drop-shadow-xl drop-shadow-primary/30"
+                  >
+                    <input
+                      type="text"
+                      class="bg-white w-full h-[60px] flex-1 outline-none pl-6"
+                      placeholder="Your Email Address"
+                    />
+
+                    <button class="btn btn-lg btn-primary w-full xl:w-auto">
+                      Let's Chat
+                    </button>
+                  </form>
+                </div>
+                <!-- form end -->
+              </div>
+            </div>
+            <!-- stats & form end -->
+          </div>
+        </div>
+      </section>
+      <!-- about end -->
 
       <!-- temp div -->
       <div class="h-[3000px]"></div>
