--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 
                 <!-- form start -->
                 <div class="about__form">
-                  <h4 class="h4 text-center mb-8">Design Your Dream Home...</h4>
+                  <h4 class="h4 text-center mb-8">Design Your Dream Home.</h4>
 
                   <form
                     class="flex flex-col xl:flex-row min-h-[135px] xl:min-h-auto gap-4 xl:gap-0 items-center drop-shadow-xl drop-shadow-primary/30"
@@ -293,6 +293,211 @@
         </div>
       </section>
       <!-- about end -->
+
+      <!-- service start -->
+      <section class="services border-b border-primary/30">
+        <div
+          class="container mx-auto xl:border-x border-primary/30 py-[100px_50px]"
+        >
+          <h2
+            class="services__title h2 max-w-[460px] mb-12 xl:mb-[90px] text-center xl:text-left mx-auto xl:mx-0"
+          >
+            Create Your Dream Space.
+          </h2>
+
+          <!-- items start -->
+          <div class="flex flex-col xl:flex-row items-center xl:items-start">
+            <!-- items 1 start -->
+            <div
+              class="services__item flex-1 p-[60px_48px] h-[440px] max-w-[480px] xl:max-w-max text-center xl:text-left"
+            >
+              <div class="w-[110px] h-[110px] mb-11 mx-auto xl:mx-0">
+                <img src="assets/services/icon-1.svg" alt="Service Icon" />
+              </div>
+
+              <h4 class="text-3xl font-medium mb-4">Smooth Workflow</h4>
+
+              <p class="text-xl">
+                Our streamlined process ensures a smooth workflow from concept
+                to completion.
+              </p>
+            </div>
+            <!-- items 1 end -->
+
+            <!-- items 2 start -->
+            <div
+              class="services__item flex-1 p-[60px_48px] h-[440px] max-w-[480px] xl:max-w-max text-center xl:text-left"
+            >
+              <div class="w-[110px] h-[110px] mb-11 mx-auto xl:mx-0">
+                <img src="assets/services/icon-2.svg" alt="Service Icon" />
+              </div>
+
+              <h4 class="text-3xl font-medium mb-4">Professionalism</h4>
+
+              <p class="text-xl">
+                We design elegant, functional interiors with a focus on quality
+                and professionalism.
+              </p>
+            </div>
+            <!-- items 2 end -->
+
+            <!-- items 3 start -->
+            <div
+              class="services__item flex-1 p-[60px_48px] h-[440px] max-w-[480px] xl:max-w-max text-center xl:text-left"
+            >
+              <div class="w-[110px] h-[110px] mb-11 mx-auto xl:mx-0">
+                <img src="assets/services/icon-3.svg" alt="Service Icon" />
+              </div>
+
+              <h4 class="text-3xl font-medium mb-4">Trusted Platform</h4>
+
+              <p class="text-xl">
+                A trusted interior platform delivering elegant designs with
+                reliability and care.
+              </p>
+            </div>
+            <!-- items 3 end -->
+          </div>
+          <!-- items start -->
+        </div>
+      </section>
+      <!-- service end -->
+
+      <!-- service secondary start -->
+      <section
+        class="services__secondary xl:h-[1380px] relative border-b border-primary/30"
+      >
+        <div
+          class="container mx-auto xl:border-x border-primary/30 h-full relative z-40"
+        >
+          <div class="pt-[100px] flex justify-end">
+            <h2
+              class="services-secondary__title h2 max-w-[600px] mx-auto xl:mx-0 text-center xl:text-right"
+            >
+              Providing Innovative Interior Design.
+            </h2>
+          </div>
+        </div>
+
+        <!-- show on desktop image start -->
+        <div class="hidden xl:flex absolute left-0 w-full top-[480px]">
+          <!-- top left image start -->
+          <div class="w-full max-w-[640px] absolute -top-[120px] left-0">
+            <img src="assets/services/1.jpg" alt="Service Top Left Image" />
+          </div>
+          <!-- top left image end -->
+
+          <!-- top right image & bottom text start -->
+          <div
+            class="w-[1035px] h-[899px] bg-page border-t border-primary/30 absolute top-0 right-0 pl-[30px] pt-[30px]"
+          >
+            <!-- top right image start -->
+            <div
+              class="w-[870px] h-[870px] absolute z-10 top-[30px] border-l border-primary/30"
+            >
+              <div
+                class="bg-pink-300 w-[870px] h-[470px] rounded-br-[370px] overflow-hidden"
+              >
+                <img
+                  class="w-full h-[470px]"
+                  src="assets/services/2.jpg"
+                  alt="Service Top Right Image"
+                />
+              </div>
+            </div>
+            <!-- top right image end -->
+
+            <!-- bottom text start -->
+            <div
+              class="bg-accent-1 w-[970px] h-[557px] absolute bottom-[30px] right-0 rounded-tr-[370px] flex flex-col justify-end pb-12"
+            >
+              <div class="py-12 ml-20 max-w-[660px] relative z-40">
+                <p class="mb-10 text-xl leading-relaxed italic text-justify">
+                  Providing innovative interior design solutions tailored to
+                  modern lifestyles. We blend creativity with functionality to
+                  transform spaces beautifully. Every project reflects our
+                  passion for detail and design excellence. Trusted by clients
+                  for delivering stylish, smart, and sustainable interiors.
+                </p>
+              </div>
+            </div>
+            <!-- bottom text end -->
+          </div>
+          <!-- top right image & bottom text end -->
+        </div>
+        <!-- show on desktop image end -->
+
+        <!-- show only on mobile start -->
+        <div class="xl:hidden bg-accent-1 w-full h-[400px]">
+          <div class="container mx-auto flex items-center h-full">
+            <div
+              class="py-12 max-w-[680px] mx-auto relative z-40 flex flex-col items-center justify-center"
+            >
+              <p class="mb-10 text-lg leading-relaxed px-5 text-justify">
+                Providing innovative interior design solutions tailored to
+                modern lifestyles. We blend creativity with functionality to
+                transform spaces beautifully. Every project reflects our passion
+                for detail and design excellence. Trusted by clients for
+                delivering stylish, smart, and sustainable interiors.
+              </p>
+
+              <div class="flex items-center justify-between px-16">
+                <button class="btn btn-lg bg-accent-2">About Us</button>
+
+                <!-- <img
+                  class="hidden xl:flex"
+                  src="assets/arrow-right.svg"
+                  alt="Service Mobile"
+                /> -->
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- show only on mobile end -->
+      </section>
+      <!-- service secondary end -->
+
+      <!-- service tertiary start -->
+      <section class="services__terttiary xl:border-b border-primary/30">
+        <div
+          class="container mx-auto xl:border-x border-primary/30 relative z-40"
+        >
+          <div class="max-w-[600px] pt-24 mx-auto xl:mx-0">
+            <h2 class="services-tertiaruy__title h2 text-center xl:text-left">
+              We will make Unique Design for you.
+            </h2>
+          </div>
+
+          <!-- Image Start -->
+          <div
+            class="services-tertiary__imgs flex flex-col xl:flex-row gap-[30px] items-center"
+          >
+            <!-- image 1 start -->
+            <div class="flex">
+              <img src="assets/services/s1.png" alt="Service Image" />
+            </div>
+            <!-- image 1 end -->
+
+            <!-- image 2 start -->
+            <div class="flex">
+              <img src="assets/services/s2.png" alt="Service Image" />
+            </div>
+            <!-- image 2 end -->
+          </div>
+          <!-- Image end -->
+
+          <!-- text start -->
+          <p class="services-tertiary__p hidden xl:flex text-2xl xl:py-[80px]">
+            We will craft a unique and innovative interior design tailored
+            specifically to your taste, lifestyle, and needs. Our team blends
+            creativity with functionality to deliver spaces that are both
+            beautiful and practical. Let us transform your space into something
+            truly exceptional and inspiring.
+          </p>
+          <!-- text end -->
+        </div>
+      </section>
+      <!-- service tertiary end -->
 
       <!-- temp div -->
       <div class="h-[3000px]"></div>
