Project & Testimonial - swiper, relative, absolute, flex, grid

--- a/index.html
+++ b/index.html
@@ -499,6 +499,226 @@
       </section>
       <!-- service tertiary end -->
 
+      <!-- project start -->
+      <section class="projects">
+        <div class="container mx-auto xl:border-x border-primary/30">
+          <h2 class="h2 text-center xl:text-right pt-24 pb-[90px] !mb-0">
+            Amazing Projects from <br />
+            Talented Interior Architects!
+          </h2>
+
+          <!-- slider start -->
+          <div class="projects__slider swiper mySwiper h-[640px] xl:h-[870px]">
+            <div class="swiper-wrapper">
+              <!-- slide 1 start -->
+              <div class="swiper-slide xl:h-full flex relative">
+                <div class="bg-accent-2/10 h-full xl:h-[670px]">
+                  <img
+                    class="w-full object-contain xl:h-full xl:object-cover"
+                    src="assets/projects/slide-1.jpg"
+                    alt="Project Image"
+                  />
+                </div>
+
+                <!-- bottom text & button start -->
+                <div
+                  class="bg-accent-1 h-[400px] md:h-[300px] xl:h-[200px] xl:rounded-bl-[300px] flex items-center absolute bottom-0 w-full"
+                >
+                  <div
+                    class="mx-auto flex flex-col xl:flex-row xl:gap-16 items-center px-8 xl:px-0"
+                  >
+                    <!-- bottom text start -->
+                    <p
+                      class="text-lg italic max-w-[600px] mb-8 xl:mb-0 text-justify"
+                    >
+                      Amazing projects brought to life by talented interior
+                      architects — where vision, innovation, and style come
+                      together beautifully to create inspiring spaces. Each
+                      design is thoughtfully crafted to reflect individuality,
+                      functionality, and aesthetic harmony, turning ordinary
+                      spaces into extraordinary experiences.
+                    </p>
+                    <!-- bottom text end -->
+
+                    <!-- button start -->
+                    <button
+                      class="btn btn-lg btn-accent-2 flex items-center gap-3"
+                    >
+                      <span>Explore Now</span>
+                      <i class="ri-arrow-right-long-line"></i>
+                    </button>
+                    <!-- button end -->
+                  </div>
+                </div>
+                <!-- bottom text & button end -->
+              </div>
+              <!-- slide 1 end -->
+
+              <!-- slide 2 start -->
+              <div class="swiper-slide xl:h-full flex relative">
+                <div class="bg-accent-2/10 h-full xl:h-[670px]">
+                  <img
+                    class="w-full object-contain xl:h-full xl:object-cover"
+                    src="assets/projects/slide-1.jpg"
+                    alt="Project Image"
+                  />
+                </div>
+
+                <!-- bottom text & button start -->
+                <div
+                  class="bg-accent-1 h-[400px] md:h-[300px] xl:h-[200px] xl:rounded-bl-[300px] flex items-center absolute bottom-0 w-full"
+                >
+                  <div
+                    class="mx-auto flex flex-col xl:flex-row xl:gap-16 items-center px-8 xl:px-0"
+                  >
+                    <!-- bottom text start -->
+                    <p
+                      class="text-lg italic max-w-[600px] mb-8 xl:mb-0 text-justify"
+                    >
+                      Amazing projects brought to life by talented interior
+                      architects — where vision, innovation, and style come
+                      together beautifully to create inspiring spaces. Each
+                      design is thoughtfully crafted to reflect individuality,
+                      functionality, and aesthetic harmony, turning ordinary
+                      spaces into extraordinary experiences.
+                    </p>
+                    <!-- bottom text end -->
+
+                    <!-- button start -->
+                    <button
+                      class="btn btn-lg btn-accent-2 flex items-center gap-3"
+                    >
+                      <span>Explore Now</span>
+                      <i class="ri-arrow-right-long-line"></i>
+                    </button>
+                    <!-- button end -->
+                  </div>
+                </div>
+                <!-- bottom text & button end -->
+              </div>
+              <!-- slide 2 end -->
+
+              <!-- <div class="swiper-slide bg-blue-200 xl:h-full flex relative">
+                slide 2
+              </div> -->
+            </div>
+            <!-- pagination start -->
+            <!-- <div class="swiper-pagination"></div> -->
+            <div
+              class="swiper-button-next xl:mr-4 after:mb-96 xl:after:mb-40"
+            ></div>
+
+            <div
+              class="swiper-button-prev xl:ml-4 after:mb-96 xl:after:mb-40"
+            ></div>
+            <!-- pagination end -->
+          </div>
+          <!-- slider end -->
+        </div>
+      </section>
+      <!-- project end -->
+
+      <!-- testimonial start -->
+      <section class="testimonials xl:h-[870px]">
+        <div class="container mx-auto xl:border-x border-primary/30 pt-32">
+          <!-- title start -->
+          <div
+            class="testimonial__title flex items-center justify-between xl:mb-12"
+          >
+            <h2 class="h2 text-center xl:text-left mx-auto xl:mx-0 !mb-0">
+              Our Customer <br />
+              Feedback.
+            </h2>
+
+            <div class="hidden xl:flex">
+              <img
+                src="assets/testimonials/quotes.svg"
+                alt="Testimonial Quota Image"
+              />
+            </div>
+          </div>
+          <!-- title end -->
+
+          <!-- slider start -->
+          <div
+            class="testimonials__slider swiper mySwiper h-[420px] xl:h-[540px]"
+          >
+            <div class="swiper-wrapper">
+              <!-- slide 1 start -->
+              <div class="swiper-slide h-full">
+                <div class="flex items-center justify-center h-full">
+                  <!-- image start  -->
+                  <div class="flex-1 hidden xl:flex">
+                    <img
+                      src="assets/testimonials/avatar-img-1.png"
+                      alt="Testimonial Image"
+                    />
+                  </div>
+                  <!-- image end  -->
+
+                  <!-- info & message start -->
+                  <div
+                    class="w-full max-w-[815px] px-6 flex flex-col gap-8 items-center xl:items-start"
+                  >
+                    <h4 class="text-3xl font-secondary font-medium">
+                      Sarah Ahmed
+                    </h4>
+
+                    <p class="text-2xl italic text-center xl:text-left">
+                      InteriorFirm brought my dream home to life. Every detail
+                      was perfectly executed with elegance and care.
+                    </p>
+
+                    <p class="text-[22px] text-primary/70">Homeowner</p>
+                  </div>
+                  <!-- info & message end -->
+                </div>
+              </div>
+              <!-- slide 1 end -->
+
+              <!-- slide 2 start -->
+              <div class="swiper-slide h-full">
+                <div class="flex items-center justify-center h-full">
+                  <!-- image start  -->
+                  <div class="flex-1 hidden xl:flex">
+                    <img
+                      src="assets/testimonials/avatar-img-2.png"
+                      alt="Testimonial Image"
+                    />
+                  </div>
+                  <!-- image end  -->
+
+                  <!-- info & message start -->
+                  <div
+                    class="w-full max-w-[815px] px-6 flex flex-col gap-8 items-center xl:items-start"
+                  >
+                    <h4 class="text-3xl font-secondary font-medium">
+                      Nusrat Jahan
+                    </h4>
+
+                    <p class="text-2xl italic text-center xl:text-left">
+                      The team was incredibly professional and creative. My
+                      space feels both stylish and functional — I absolutely
+                      love it!
+                    </p>
+
+                    <p class="text-[22px] text-primary/70">Entrepreneur</p>
+                  </div>
+                  <!-- info & message end -->
+                </div>
+              </div>
+              <!-- slide 2 end -->
+            </div>
+
+            <!-- pagination start -->
+            <div class="swiper-pagination"></div>
+            <!-- pagination end -->
+          </div>
+          <!-- slider end -->
+        </div>
+      </section>
+      <!-- testimonial end -->
+
       <!-- temp div -->
       <div class="h-[3000px]"></div>
       <!-- temp div -->
