Contact & Footer Section

--- a/index.html
+++ b/index.html
@@ -719,8 +719,179 @@
       </section>
       <!-- testimonial end -->
 
+      <!-- contact start -->
+      <section class="contact relative min-h-[700px] xl:min-h-[760px]">
+        <div class="container mx-auto xl:border-x border-primary/30 pt-[100px]">
+          <div
+            class="bg-accent-1 py-24 absolute left-0 right-0 xl:rounded-br-[370px]"
+          >
+            <!-- text & image start -->
+            <div class="container mx-auto">
+              <div
+                class="flex flex-col xl:flex-row items-center justify-between w-full"
+              >
+                <!-- text start -->
+                <div class="w-full text-center xl:text-left xl:max-w-[815px]">
+                  <h2 class="h2 !mb-9">
+                    Interested in <br />
+                    Working with Us?
+                  </h2>
+
+                  <p class="mb-12 text-2xl max-w-[900px] mx-auto xl:mx-0">
+                    Have a project in mind or need more information? Reach out
+                    to us — we’d love to hear from you!
+                  </p>
+
+                  <button class="btn btn-lg btn-accent-2">Contact Us</button>
+                </div>
+
+                <!-- text end -->
+
+                <!-- image start -->
+                <div class="hidden xl:flex flex-1 justify-end">
+                  <img src="assets/contact/img.png" alt="Contact Image" />
+                </div>
+                <!-- image end -->
+              </div>
+            </div>
+            <!-- text & image end -->
+          </div>
+        </div>
+      </section>
+      <!-- contact end -->
+
+      <!-- footer start -->
+      <footer class="footer relative">
+        <div class="footer__container container mx-auto pt-12 pb-24">
+          <div
+            class="flex flex-col xl:flex-row justify-center gap-24 text-center xl:text-left"
+          >
+            <!-- logo start -->
+            <div class="xl:w-[380px]">
+              <div class="w-[290px] mb-8 mx-auto xl:mx-0">
+                <a
+                  href="https://marleydip.netlify.app/"
+                  target="_blank"
+                  aria-label="Developer Profile"
+                >
+                  <img
+                    class="w-full"
+                    src="assets/logo-bottom.svg"
+                    alt="Company Logo"
+                  />
+                </a>
+              </div>
+
+              <p class="text-xl max-w-[700px] mx-auto xl:mx-0">
+                Designing timeless interiors with passion, precision, and a
+                commitment to excellence.
+              </p>
+            </div>
+            <!-- logo end -->
+
+            <!-- items start -->
+            <div
+              class="flex-1 flex flex-col md:flex-row gap-24 xl:gap-0 text-center xl:text-left"
+            >
+              <!-- Company start -->
+              <div class="flex-1">
+                <h5 class="font-secondary text-xl font-medium mb-12">
+                  Company
+                </h5>
+
+                <ul class="flex flex-col gap-6 text-primary/60">
+                  <li><a href="#">Career</a></li>
+
+                  <li><a href="#">About</a></li>
+
+                  <li><a href="#">Blog</a></li>
+
+                  <li><a href="#">feature</a></li>
+
+                  <li><a href="#">Story</a></li>
+                </ul>
+              </div>
+              <!-- Company end -->
+
+              <!-- Design start -->
+              <div class="flex-1">
+                <h5 class="font-secondary text-xl font-medium mb-12">Design</h5>
+
+                <ul class="flex flex-col gap-6 text-primary/60">
+                  <li><a href="#">2D Designer</a></li>
+
+                  <li><a href="#">3D Designer</a></li>
+
+                  <li><a href="#">Collaboration</a></li>
+
+                  <li><a href="#">Tools</a></li>
+
+                  <li><a href="#">Important Link</a></li>
+                </ul>
+              </div>
+              <!-- Design end -->
+
+              <!--  links start -->
+              <div class="flex-1">
+                <h5 class="font-secondary text-xl font-medium mb-12">Links</h5>
+
+                <ul class="flex flex-col gap-6 text-primary/60">
+                  <li><a href="#">Projects</a></li>
+
+                  <li><a href="#">Contact</a></li>
+
+                  <li><a href="#">Send Email</a></li>
+
+                  <li><a href="#">Fiverr</a></li>
+
+                  <li><a href="#">Upwork</a></li>
+                </ul>
+              </div>
+              <!-- links end -->
+
+              <!--  Material start -->
+              <div class="flex-1">
+                <h5 class="font-secondary text-xl font-medium mb-12">
+                  Material
+                </h5>
+
+                <ul class="flex flex-col gap-6 text-primary/60">
+                  <li><a href="#">Company Profile</a></li>
+
+                  <li><a href="#">Assets</a></li>
+
+                  <li><a href="#">Location Map</a></li>
+
+                  <li><a href="#">Estimate Cost</a></li>
+                </ul>
+              </div>
+              <!-- Material end -->
+            </div>
+            <!-- items end -->
+          </div>
+        </div>
+
+        <!-- copyright text start -->
+        <div class="border-t border-primary/30">
+          <div class="container mx-auto py-10 text-sm text-center">
+            <p>
+              &copy; copyright <span id="year"></span>
+              <a
+                href="https://marleydip.netlify.app/"
+                target="_blank"
+                class="text-blue-600 hover:underline"
+                >Sofian Hasan</a
+              >
+              - All rights reserved.
+            </p>
+          </div>
+        </div>
+        <!-- copyright text end -->
+      </footer>
+      <!-- footer end -->
+
       <!-- temp div -->
-      <div class="h-[3000px]"></div>
+      <!-- <div class="h-[3000px]"></div> -->
       <!-- temp div -->
     </div>
   </body>
