--- a/index.html
+++ b/index.html
@@ -432,10 +432,12 @@
         <!-- show on desktop image end -->
 
         <!-- show only on mobile start -->
-        <div class="xl:hidden bg-accent-1 w-full h-[400px]">
+        <div
+          class="services-secondary__mobile xl:hidden bg-accent-1 w-full h-[400px]"
+        >
           <div class="container mx-auto flex items-center h-full">
             <div
-              class="py-12 max-w-[680px] mx-auto relative z-40 flex flex-col items-center justify-center"
+              class="services-secondary__mobileTextBtn py-12 max-w-[680px] mx-auto relative z-40 flex flex-col items-center justify-center"
             >
               <p class="mb-10 text-lg leading-relaxed px-5 text-justify">
                 Providing innovative interior design solutions tailored to
